# virgo-plus

./: CMakeLists.txt  README.md
lib/virgo/: CMakeLists.txt  polyCommit.hpp
lib/virgo/src/: CMakeLists.txt  RS_polynomial.h  fft_circuit_GKR.cpp  fieldElement.cpp  fieldElement.h  flo-shani.c  fri.cpp  fri.h  merkle_tree.cpp  my_hhash.h  polynomial.h  vpd_prover.h  vpd_verifier.h
src/: CMakeLists.txt  circuit.cpp  circuit.h  main.cpp  prover.cpp  prover.h  verifier.cpp  verifier.h
